--- a/App/namespace.yaml
+++ b/App/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ns1-coo
+  name: ns1-uwl
   labels:
     monitoring.rhobs/stack: multi-ns
     openshift.io/log-alerting: 'true'
