--- a/UserWorkload/prometheusrule.yaml
+++ b/UserWorkload/prometheusrule.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   name: example-alert
-  namespace: ns1-coo
+  namespace: ns1-uwl
 spec:
   groups:
   - name: threepilar-uwl-example
