--- a/Opentelemetry/collector.yaml
+++ b/Opentelemetry/collector.yaml
@@ -4,6 +4,9 @@ metadata:
   name: otel
   namespace: ns1-uwl
 spec:
+  observability:
+    metrics:
+      enableMetrics: true
   serviceAccount: otel-collector-sidecar
   mode: sidecar
   config: |
@@ -22,6 +25,24 @@ spec:
         detectors: [openshift]
         timeout: 2s
     exporters:
+      otlp:
+        endpoint: tempo-simplest-gateway.ns1-uwl.svc.cluster.local:8090
+        tls:
+          insecure: false
+          ca_file: "/var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt"
+        auth:
+          authenticator: bearertokenauth
+        headers:
+          X-Scope-OrgID: "dev"
+      otlphttp:
+        endpoint: https://tempo-simplest-gateway.ns1-uwl.svc.cluster.local:8080/api/traces/v1/dev
+        tls:
+          insecure: false
+          ca_file: "/var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt"
+        auth:
+          authenticator: bearertokenauth
+        headers:
+          X-Scope-OrgID: "dev"
       debug:
         verbosity: detailed
     service:
@@ -35,3 +56,61 @@ spec:
           processors: [memory_limiter, resourcedetection, batch]
           exporters: [debug]
   managementState: managed
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tempostack-traces-write
+rules:
+  - apiGroups:
+      - 'tempo.grafana.com'
+    # this needs to match tenant name in the CR/tenants.yaml and the tenant has be sent in X-Scope-OrgID
+    # The API gateway sends the tenantname as resource (res) to OPA sidecar
+    resources:
+      - dev
+    resourceNames:
+      - traces
+    verbs:
+      - 'create'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tempostack-traces
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: tempostack-traces-write
+subjects:
+  - kind: ServiceAccount
+    name: dev-collector
+    namespace: ns1-uwl
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: tempostack-traces-write
+rules:
+  - apiGroups:
+      - 'tempo.grafana.com'
+    # this needs to match tenant name in the CR/tenants.yaml and the tenant has be sent in X-Scope-OrgID
+    # The API gateway sends the tenantname as resource (res) to OPA sidecar
+    resources:
+      - dev
+    resourceNames:
+      - traces
+    verbs:
+      - 'create'
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: tempostack-traces
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: tempostack-traces-write
+subjects:
+  - kind: ServiceAccount
+    name: dev-collector
+    namespace: ns1-uwl
