--- a/Logging/04_loggingstack.yaml
+++ b/Logging/04_loggingstack.yaml
@@ -23,7 +23,7 @@ spec:
       type: s3
     tls:
       caName: openshift-service-ca.crt
-  storageClassName: gp3-csi
+  storageClassName: preferredstorageclass
   tenants:
     mode: openshift-logging
 ---
