--- a/Tempo/03_tempo.yaml
+++ b/Tempo/03_tempo.yaml
@@ -26,7 +26,7 @@ spec:
       name: tempostack-dev-odf
       type: s3
     tls:
-      enable: true
+      enabled: true
   storageSize: 1Gi
   resources:
     total:
